--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,8 +1,10 @@
 
 <router-outlet>
-  <div *ngFor="let v of tabStatistique">
+  <ng-container *ngFor="let v of tabStatistique">
 
-     <h3 class="m-0">{{ v.titre}}</h3>
+    <app-statistique [unStat]="v" >
+      
+    </app-statistique> 
 
-  </div>
+  </ng-container>
 </router-outlet>
