--- a/src/app/statistique/statistique.component.html
+++ b/src/app/statistique/statistique.component.html
@@ -2,4 +2,5 @@
 <div class="card-body">
     <p>Titre: {{ unStat.titre }}</p>
     <p>Valeur : {{ unStat.valeur }} </p>
+    <button class="btn btn-danger" (click)="gererClic()">Supprimer</button>
 </div>
